--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ html {
   line-height: 1.5;
   color: #777;
   box-sizing: border-box;
+  text-size-adjust: 100%;
 }
 
 body {
@@ -18,6 +19,7 @@ body {
   background-position: 50% 100%;
   background-repeat: no-repeat;
   background-color: #fff;
+  min-width: 1170px;
 }
 
 h2 {
@@ -122,6 +124,7 @@ img {
   background-image: url(../images/header.jpg);
   background-position: 50% 0;
   color: #fff;
+  background-repeat: no-repeat;
 }
 
 .header-container {
@@ -150,9 +153,9 @@ img {
 
 .about {
   background-color: #f6f4f4;
-  background-image: url(../images/about-bg.jpg);
+  background-image: url(../images/about-bg.png);
   background-repeat: no-repeat;
-  background-position: 101% 23px;
+  background-position: 50% 23px;
 }
 
 .about-container {
@@ -385,14 +388,13 @@ img {
   position: relative;
 }
 
-.order-form::before {
+.separator {
   border-left: 1px solid #fafafa;
   border-right: 1px solid #edebeb;
-  content: '';
-  position: absolute;
-  top: 10px;
-  bottom: 10px;
-  left: 295px;
+  vertical-align: top;
+  height: 35px;
+  margin-top: 10px;
+  display: inline-block;
 }
 
 .order-btn {
@@ -573,6 +575,7 @@ img {
   display: flex;
   justify-content: space-between;
   padding: 70px 15px;
+  align-items: center;
 }
 
 .our-clients {
@@ -680,6 +683,7 @@ img {
   color: #7cc0d4;
   margin: 0 auto;
   max-width: 1170px;
+  padding: 0 15px;
 }
 
 .copyright {
